--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
-.App {
+body {
+background-color: yellow;
+
+}
+.wrapper {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: auto;
+  margin: auto;
+  max-width: 450px;
+  background-color: #ff00ea;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+}
+
+#header {
   text-align: center;
+  font-size: 25px;
+  font-weight: bold;
+  margin-top: 0;
+  margin-bottom: 20px;
+  background-color: #ff00ea;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input[type="text"] {
+  font-size: 20px;
+  padding: 10px;
+  color: #333;
+  border: 2px solid #333;
+  border-radius: 5px;
+  width: 50%;
+  margin-bottom: 20px;
+  background-color: #ff00ea;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type="text"]::placeholder {
+  color: rgb(253, 245, 245);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+button[type="button"] {
+  background-color: #ff00ea;
+  border: 2px solid #333;
+  border-radius: 5px;
+
+  color: #333;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 
-.App-link {
-  color: #61dafb;
+button[type="button"]:hover {
+  background-color: #ff00ea;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submitBtn{
+   padding: 10px 20px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  position: relative;
+  padding-left: 30px;
+  font-size: 20px;
+  line-height: 1.5;
+  margin-bottom: 10px;
+  background-color: #ff00ea;
+  border: 2px solid #333;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+li:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 7px;
+  width: 20px;
+  height: 25px;
+  transform: rotate(45deg);
+}
+
+.binBtn {
+  display: inline-block;
+  position: absolute;
+  right: 15px;
+  width: 40px;
+  height: 30px;
+  line-height: 1.5;
+  font-size: 30px;
+  background: url("https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js");
+  cursor: pointer;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.binBtn:hover {
+  opacity: 0.8;
+}
+
+.finished {
+  text-decoration: line-through;
+}
+
+#placeholder{
+  color: azure;
 }
